[gd_scene load_steps=18 format=3 uid="uid://58l8d5hgpbx1"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_kh6rk"]
[ext_resource type="Script" path="res://Scripts/CameraPivot.gd" id="2_uyqjn"]
[ext_resource type="PackedScene" uid="uid://qkbx0jyr5v07" path="res://Scenes/Guns/pistol.tscn" id="3_v7g1n"]
[ext_resource type="Script" path="res://addons/godot-joystick-addon-main/joystick.gd" id="3_ywso4"]
[ext_resource type="PackedScene" uid="uid://bl5ifx6ce20yo" path="res://Prefabs/touch_button.tscn" id="4_wdrew"]
[ext_resource type="PackedScene" uid="uid://14u7yhbx27r2" path="res://Scenes/crosshair.tscn" id="5_5615c"]
[ext_resource type="PackedScene" uid="uid://cg7oq21ipfe34" path="res://Prefabs/pickable_list.tscn" id="7_olca5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qfbue"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_v43v0"]

[sub_resource type="GDScript" id="GDScript_xwce6"]
script/source = "extends HBoxContainer


signal slot_selected(gun)

@onready var left = $Left
@onready var right = $Right
@onready var left_label = $Left/Label
@onready var right_label = $Right/Label


func add_gun(gun_name: String, gun):
	if !has_two_guns():
		if left_label.text != \"\":
			right_label.text = gun_name
			right.gun = gun
			right.select()
			return
		else:
			left_label.text = gun_name
			left.gun = gun
			left.select()
			return
			
		if right_label.text != \"\":
			left_label.text = gun_name
			left.gun = gun
			left.select()
			return
		else:
			right_label.text = gun_name
			right.gun = gun
			right.select()
			return
	else:
		get_current_selected_weapon().text = gun_name
		get_current_selected_weapon().get_parent().gun = gun

func remove_gun():
	get_current_selected_weapon().text = \"\"
	get_current_selected_weapon().get_parent().gun = null
	get_current_selected_weapon().get_parent().unselect()
	
	
func has_two_guns():
	return left_label.text != \"\" && right_label.text != \"\"


func get_current_selected_weapon():
	return left_label if left.state == left.STATE.SELECTED else right_label

func get_secondary_slot():
	return left_label if get_current_selected_weapon() == right_label else right_label
	
func unselect(ref):
	if ref == left:
		right.unselect()
	else:
		left.unselect()

"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yvihf"]
bg_color = Color(0.137255, 0.137255, 0.137255, 1)

[sub_resource type="GDScript" id="GDScript_o1rge"]
script/source = "@tool
extends Panel

@export_range(0.0, 1.0) var _transparency: float = 1.0

enum STATE {SELECTED, UNSELECTED}
var state = STATE.UNSELECTED
var gun = null


func _gui_input(event):
	if event is InputEventScreenTouch:
		if event.pressed:
			if get_child(0).text != \"\":
				select()
				get_parent().slot_selected.emit(gun)
			
func _process(delta):
	self.modulate.a = _transparency


func select():
	var style : StyleBoxFlat = get(\"theme_override_styles/panel\")
	style.border_width_bottom = 1
	style.border_width_top = 1
	style.border_width_left = 1
	style.border_width_right = 1
	state = STATE.SELECTED
	get_parent().unselect(self)
	

func unselect():
	var style : StyleBoxFlat = get(\"theme_override_styles/panel\")
	style.border_width_bottom = 0
	style.border_width_top = 0
	style.border_width_left = 0
	style.border_width_right = 0
	state = STATE.UNSELECTED
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1pw5"]
bg_color = Color(0.137255, 0.137255, 0.137255, 1)

[sub_resource type="Animation" id="Animation_7448s"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot/Camera3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraPivot/Camera3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraPivot/Camera3D:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_qnntu"]
resource_name = "ads_moving"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot/AdsCamera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(-9.78133e-05, -0.25, 0, 0.25, 0, 0, -0.3, 0.0367281, 0.25, 0, -0.0409405, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -8.55647e-06, -0.3, 0.0377131, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraPivot/AdsCamera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.2, 0.0410393, 0.0618036, -0.25, 0, 0.25, 0, 0, -0.2, 0.0385718, 0.2, 0.0459743, 0.0618036, -0.25, 0, 0.25, 0, 0, -0.2, 0.0484419, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraPivot/AdsCamera:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}

[sub_resource type="Animation" id="Animation_a1c2v"]
resource_name = "moving"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot/Camera3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(-9.78133e-05, -0.25, 0, 0.25, 0, 0, -0.3, 0.0367281, 0.25, 0, -0.0582367, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -8.55647e-06, -0.3, 0.0377131, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraPivot/Camera3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.2, 0.0410393, 0.119772, -0.25, 0, 0.25, 0, 0, -0.2, 0.0385718, 0.2, 0.0459743, 0.119772, -0.25, 0, 0.25, 0, 0, -0.2, 0.0484419, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraPivot/Camera3D:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v8ny1"]
_data = {
"RESET": SubResource("Animation_7448s"),
"ads_moving": SubResource("Animation_qnntu"),
"moving": SubResource("Animation_a1c2v")
}

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("joystick", "camera_drag", "jump_btn", "crosshair", "fire_btn", "ads_btn") groups=["player"]]
script = ExtResource("1_kh6rk")
joystick = NodePath("UI/Joystick")
camera_drag = NodePath("UI/CameraDrag")
jump_btn = NodePath("UI/Jump")
crosshair = NodePath("UI/Crosshair")
fire_btn = NodePath("UI/Fire")
ads_btn = NodePath("UI/Ads")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_qfbue")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_v43v0")

[node name="CameraPivot" type="Node3D" parent="." groups=["camera_pivot"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.550974, -0.124078)
script = ExtResource("2_uyqjn")

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]

[node name="AdsCamera" type="Camera3D" parent="CameraPivot"]

[node name="AdsPivot" type="Marker3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.481, -0.254, -0.374)

[node name="GunPivot" type="Marker3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.482052, -0.509581, -0.92213)

[node name="Pistol" parent="CameraPivot/GunPivot" instance=ExtResource("3_v7g1n")]

[node name="SecondaryGunPivot" type="Marker3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.126367, -0.230582, 0.619334)

[node name="UI" type="CanvasLayer" parent="."]

[node name="CameraDrag" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 486.0
offset_top = 71.0
offset_right = 1054.0
offset_bottom = 557.0

[node name="Joystick" type="Node2D" parent="UI"]
position = Vector2(162, 411)
script = ExtResource("3_ywso4")
_big_circle_color = Color(0, 0, 0, 0.901961)

[node name="Jump" parent="UI" instance=ExtResource("4_wdrew")]
modulate = Color(1, 1, 1, 0.594)
offset_left = 1036.0
offset_top = 393.0
offset_right = 1126.0
offset_bottom = 483.0
button_name = "Jump"
_transparency = 0.594

[node name="Crosshair" parent="UI" instance=ExtResource("5_5615c")]
position = Vector2(576, 324)

[node name="Fire" parent="UI" instance=ExtResource("4_wdrew")]
modulate = Color(1, 1, 1, 0.605)
offset_left = 881.0
offset_top = 462.0
offset_right = 971.0
offset_bottom = 552.0
button_name = "Fire"
_transparency = 0.605

[node name="Ads" parent="UI" instance=ExtResource("4_wdrew")]
modulate = Color(1, 1, 1, 0.605)
offset_left = 913.0
offset_top = 314.0
offset_right = 1003.0
offset_bottom = 404.0
button_name = "ADS"
_transparency = 0.605

[node name="PickableList" parent="UI" instance=ExtResource("7_olca5")]
offset_left = 622.0
offset_top = 207.0
offset_right = -323.0
offset_bottom = -212.0
metadata/_edit_group_ = true

[node name="Weapons" type="HBoxContainer" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.5
offset_top = -70.0
offset_right = 120.5
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
script = SubResource("GDScript_xwce6")

[node name="Left" type="Panel" parent="UI/Weapons"]
modulate = Color(1, 1, 1, 0.7)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_yvihf")
script = SubResource("GDScript_o1rge")
_transparency = 0.7

[node name="Label" type="Label" parent="UI/Weapons/Left"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Right" type="Panel" parent="UI/Weapons"]
modulate = Color(1, 1, 1, 0.7)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_y1pw5")
script = SubResource("GDScript_o1rge")
_transparency = 0.7

[node name="Label" type="Label" parent="UI/Weapons/Right"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v8ny1")
}

[node name="Foot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.969629, 0)

[connection signal="gui_input" from="UI/CameraDrag" to="." method="_on_camera_drag_gui_input"]
[connection signal="gui_input" from="UI/CameraDrag" to="CameraPivot" method="_on_camera_drag_gui_input"]
[connection signal="pressed" from="UI/Jump" to="." method="_on_jump_pressed"]
[connection signal="pressed" from="UI/Fire" to="." method="_on_fire_pressed"]
[connection signal="pressed" from="UI/Ads" to="." method="_on_ads_pressed"]
